--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ h3{
 .navbar-white .navbar-collapse{
   justify-content: space-between;
 }
-.custom-toggler .navbar-toggler-icon {
+.navbar .custom-toggler .navbar-toggler-icon {
   background-image: url(
 "data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.8)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
@@ -70,13 +70,13 @@ h3{
   display: flex;
   justify-content: center;
 }
-.sidebar .logo{
+.sidebar .offcanvas-header .logo{
   width: 18%;
 }
-.sidebar-link {
+.sidebar .offcanvas-body .sidebar-link {
   align-items: center;
 }
-.sidebar-link .right-icon {
+.sidebar .offcanvas-body .sidebar-link .right-icon {
   display: inline-flex;
 }
 .sidebar .offcanvas-body .icon{
@@ -88,11 +88,11 @@ h3{
 .sidebar .offcanvas-body .navbar-nav li{
   margin: 5px 0px;
 }
-.list-style{
+.sidebar .offcanvas-body .list-style{
   list-style-type: disc;
   padding-left: 85px;
 }
-/* main css */
+/* dashboard main css */
 .card{
   border: 0px;
   background: #FFFFFF;
@@ -173,23 +173,23 @@ h3{
   font-size: 18px;
   color: #1C1C1C;
 }
-.progress-wrapper{
+.task-card .progress-wrapper{
   margin: 20px 0px;
 }
-.progress-wrapper h5{
+.task-card .progress-wrapper h5{
   font-weight: 400;
   font-size: 14px;
   color: #1C1C1C;
 }
-.progress {
+.task-card .progress {
   position: relative;
   height: 25px;
 }
-.progress-bar{
+.task-card .progress-bar{
   background: #C6C7F8;
   border-radius: 8px 0px 0px 8px;
 }
-.progress > .progress-type {
+.task-card .progress > .progress-type {
   position: absolute;
   left: 0px;
   font-weight: 800;
@@ -197,12 +197,13 @@ h3{
   color: rgb(255, 255, 255);
   background-color: rgba(25, 25, 25, 0.2);
 }
-.progress > .progress-completed {
+.task-card .progress > .progress-completed {
   position: absolute;
   right: 0px;
   font-weight: 800;
   padding: 3px 10px 2px;
 }
+/* attendance main css */
 .download-btn{
   font-weight: 600;
   font-size: 16.1556px;
@@ -212,6 +213,134 @@ h3{
 }
 .input{
   padding: 1rem .75rem;
+}
+table.table tr th, table.table tr td {
+  border-color: #e9e9e9;
+  padding: 12px 15px;
+  vertical-align: middle;
+}
+table.table tr th:first-child {
+  width: 60px;
+}
+table.table tr th:last-child {
+  width: 100px;
+}
+table.table-striped tbody tr:nth-of-type(odd) {
+  background-color: #fcfcfc;
+}
+table.table-striped.table-hover tbody tr:hover {
+  background: #f5f5f5;
+}
+table.table th i {
+  font-size: 13px;
+  margin: 0 5px;
+  cursor: pointer;
+}
+table.table td:last-child i {
+  opacity: 0.9;
+  font-size: 22px;
+  margin: 0 5px;
+}
+table.table td a {
+  font-weight: bold;
+  color: #566787;
+  display: inline-block;
+  text-decoration: none;
+  outline: none !important;
+}
+table.table td a:hover {
+  color: #2196F3;
+}
+table.table td i {
+  font-size: 19px;
+}
+.pagination {
+  float: right;
+  margin: 0 0 5px;
+}
+.pagination li a {
+  border: none;
+  font-size: 13px;
+  min-width: 30px;
+  min-height: 30px;
+  color: #999;
+  margin: 0 2px;
+  line-height: 30px;
+  border-radius: 2px !important;
+  text-align: center;
+  padding: 0 6px;
+}
+.pagination li a:hover {
+  color: #666;
+}
+.pagination li.active a, .pagination li.active a.page-link {
+  background: #03A9F4;
+}
+.pagination li.active a:hover {
+  background: #0397d6;
+}
+.pagination li.disabled i {
+  color: #ccc;
+}
+.pagination li i {
+  font-size: 16px;
+  padding-top: 6px
+}
+.hint-text {
+  float: left;
+  margin-top: 10px;
+  font-size: 13px;
+}
+/* Custom checkbox */
+.custom-checkbox {
+  position: relative;
+}
+.custom-checkbox input[type="checkbox"] {
+  opacity: 0;
+  position: absolute;
+  margin: 5px 0 0 3px;
+  z-index: 9;
+}
+.custom-checkbox label:before{
+  width: 18px;
+  height: 18px;
+}
+.custom-checkbox label:before {
+  content: '';
+  margin-right: 10px;
+  display: inline-block;
+  vertical-align: text-top;
+  background: white;
+  border: 1px solid #bbb;
+  border-radius: 2px;
+  box-sizing: border-box;
+  z-index: 2;
+}
+.custom-checkbox input[type="checkbox"]:checked + label:after {
+  content: '';
+  position: absolute;
+  left: 6px;
+  top: 3px;
+  width: 6px;
+  height: 11px;
+  border: solid #000;
+  border-width: 0 3px 3px 0;
+  transform: inherit;
+  z-index: 3;
+  transform: rotateZ(45deg);
+}
+.custom-checkbox input[type="checkbox"]:checked + label:before {
+  border-color: #03A9F4;
+  background: #03A9F4;
+}
+.custom-checkbox input[type="checkbox"]:checked + label:after {
+  border-color: #fff;
+}
+.custom-checkbox input[type="checkbox"]:disabled + label:before {
+  color: #b8b8b8;
+  cursor: auto;
+  box-shadow: none;
+  background: #ddd;
 }
 /* media query */
 @media (min-width: 992px) {
