--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ h3{
 }
 .navbar-collapse .icon-wrapper img{
   margin: 0px 10px;
+  cursor: pointer;
 }
 .navbar-collapse .icon-wrapper .avatar-image {
   width: 50px;
@@ -59,6 +60,7 @@ h3{
 .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .show>.nav-link{
   background: rgba(238, 238, 238, 0.2);
   border-radius: 8px;
+  
 }
 /* sidebar css */
 .sidebar {
@@ -134,6 +136,7 @@ h3{
 .card-body .avatar-group .avatar{
   margin-left: -7px;
   transition: transform 0.3s ease;
+  cursor: pointer;
 }
 .card-body .avatar-group .avatar:hover{
   transform: translate(-2px);
@@ -214,8 +217,16 @@ h3{
 .input{
   padding: 1rem .75rem;
 }
-table.table tr th, table.table tr td {
+table.table tr th{
+  font-weight: 400;
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.4);
+} 
+table.table tr td {
   border-color: #e9e9e9;
+  font-weight: 400;
+  font-size: 12px;
+  color: #1C1C1C;
   padding: 12px 15px;
   vertical-align: middle;
 }
@@ -225,34 +236,23 @@ table.table tr th:first-child {
 table.table tr th:last-child {
   width: 100px;
 }
-table.table-striped tbody tr:nth-of-type(odd) {
-  background-color: #fcfcfc;
+table.table tr .badge-success{
+  background: #4AA785;
+  border-radius: 18px;
+  font-weight: 400;
+  font-size: 12px;
 }
-table.table-striped.table-hover tbody tr:hover {
-  background: #f5f5f5;
+table.table tr .badge-danger{
+  background: #E25959;
+  border-radius: 18px;
+  font-weight: 400;
+  font-size: 12px;
 }
-table.table th i {
-  font-size: 13px;
-  margin: 0 5px;
+table.table tr img{
   cursor: pointer;
 }
-table.table td:last-child i {
-  opacity: 0.9;
-  font-size: 22px;
-  margin: 0 5px;
-}
-table.table td a {
-  font-weight: bold;
-  color: #566787;
-  display: inline-block;
-  text-decoration: none;
-  outline: none !important;
-}
-table.table td a:hover {
-  color: #2196F3;
-}
-table.table td i {
-  font-size: 19px;
+.table-striped>tbody>tr:nth-of-type(odd){
+  --bs-table-accent-bg: none;
 }
 .pagination {
   float: right;
@@ -263,7 +263,7 @@ table.table td i {
   font-size: 13px;
   min-width: 30px;
   min-height: 30px;
-  color: #999;
+  color: #1C1C1C;
   margin: 0 2px;
   line-height: 30px;
   border-radius: 2px !important;
@@ -271,25 +271,16 @@ table.table td i {
   padding: 0 6px;
 }
 .pagination li a:hover {
-  color: #666;
+  color: #1C1C1C;
 }
 .pagination li.active a, .pagination li.active a.page-link {
-  background: #03A9F4;
-}
-.pagination li.active a:hover {
-  background: #0397d6;
-}
-.pagination li.disabled i {
-  color: #ccc;
+  background: rgba(0, 0, 0, 0.05);
+  border-radius: 8px;
+  color: #1C1C1C;
 }
 .pagination li i {
   font-size: 16px;
   padding-top: 6px
-}
-.hint-text {
-  float: left;
-  margin-top: 10px;
-  font-size: 13px;
 }
 /* Custom checkbox */
 .custom-checkbox {
@@ -365,5 +356,10 @@ table.table td i {
 @media (max-width: 991px){
   .top-logo{
     width: 10%;
+  }
+}
+@media (max-width: 663px){
+  .navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl{
+    display: inline;
   }
 }
