--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ table.table tr td {
   font-weight: 400;
   font-size: 12px;
   color: #1C1C1C;
-  padding: 12px 15px;
+  padding: 12px 9px;
   vertical-align: middle;
 }
 table.table tr th:first-child {
@@ -356,6 +356,14 @@ table.table tr img{
 @media (max-width: 991px){
   .top-logo{
     width: 10%;
+  }
+  .navbar-collapse .has-search{
+    margin-left: 0px;
+    width: 100%;
+    margin-top: 15px;
+  }
+  .icon-wrapper{
+    margin-top: 20px;
   }
 }
 @media (max-width: 663px){
